[package]
name = "primer_align"
version = "1.0.0"
edition = "2021"
description = "qPCR Primer Inclusivity Analysis Tool - A fast Rust implementation"
license = "MIT"

[dependencies]
# GUI framework
eframe = "0.29"
egui = "0.29"

# Bioinformatics - rust-bio for pairwise alignment
bio = "2.0"

# Parallel processing
rayon = "1.10"

# File dialogs
rfd = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Excel export
rust_xlsxwriter = "0.79"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
